WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150577
http/tests/contentextensions/async-xhr-onerror.html is flaky on mac-wk2
https://bugs.webkit.org/show_bug.cgi?id=150577
Summary
http/tests/contentextensions/async-xhr-onerror.html is flaky on mac-wk2
Ryan Haddad
Reported
2015-10-26 15:33:09 PDT
http/tests/contentextensions/async-xhr-onerror.html is flaky on mac-wk2 <
http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fcontentextensions%2Fasync-xhr-onerror.html
> --- /Volumes/Data/slave/mavericks-debug-tests-wk2/build/layout-test-results/http/tests/contentextensions/async-xhr-onerror-expected.txt +++ /Volumes/Data/slave/mavericks-debug-tests-wk2/build/layout-test-results/http/tests/contentextensions/async-xhr-onerror-actual.txt @@ -5,6 +5,7 @@ Asynchronous onreadystatechange status: 0, readyState:1, responseText: Finished runTest. Waiting for callbacks Asynchronous onreadystatechange status: 0, readyState:4, responseText: +timeout - this should not be called. onerror was called. Asynchronous onreadystatechange status: 0, readyState:4, responseText: onerror was called.
Attachments
Patch
(1.85 KB, patch)
2015-11-06 13:18 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(3.79 KB, patch)
2015-11-09 12:35 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2015-11-05 09:20:14 PST
Marked as flaky in <
https://trac.webkit.org/r192059
>
Alex Christensen
Comment 2
2015-11-06 13:18:49 PST
Created
attachment 264954
[details]
Patch
Alex Christensen
Comment 3
2015-11-06 15:23:54 PST
This should be landed along with marking the test as not flaky any more.
Darin Adler
Comment 4
2015-11-07 16:33:47 PST
Comment on
attachment 264954
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=264954&action=review
> Source/WebCore/xml/XMLHttpRequest.cpp:786 > + if (m_timeoutTimer.isActive()) > + m_timeoutTimer.stop();
Why do we need the "!isActive" check here? Calling stop should be harmless if the timer is not active.
Alex Christensen
Comment 5
2015-11-09 11:57:01 PST
(In reply to
comment #4
)
> Comment on
attachment 264954
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=264954&action=review
> > > Source/WebCore/xml/XMLHttpRequest.cpp:786 > > + if (m_timeoutTimer.isActive()) > > + m_timeoutTimer.stop(); > > Why do we need the "!isActive" check here? Calling stop should be harmless > if the timer is not active.
It was done elsewhere in this file. I'll remove it elsewhere.
Alex Christensen
Comment 6
2015-11-09 12:35:32 PST
Created
attachment 265081
[details]
Patch
WebKit Commit Bot
Comment 7
2015-11-09 13:25:47 PST
Comment on
attachment 265081
[details]
Patch Clearing flags on attachment: 265081 Committed
r192175
: <
http://trac.webkit.org/changeset/192175
>
WebKit Commit Bot
Comment 8
2015-11-09 13:25:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug