XHR timeouts should not fire if there is an immediate network error. https://bugs.webkit.org/show_bug.cgi?id=150577

Patch by Alex Christensen <achristensen@webkit.org> on 2015-11-09
Reviewed by Darin Adler.

Source/WebCore:

This fixes flakiness of http/tests/contentextensions/async-xhr-onerror.html since r191077.

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::createRequest):
(WebCore::XMLHttpRequest::internalAbort):
(WebCore::XMLHttpRequest::didFinishLoading):
If the timeout timer has been started and we are going to immediately report a network error, then stop the timeout timer.
The timeout timer sometimes fired before the network error timer if it was a very short timeout (such as 1ms).
Also checks to isActive before calling stop on a timer are not necessary.

LayoutTests:

* platform/mac-wk2/TestExpectations:
http/tests/contentextensions/async-xhr-onerror.html shouldn't be flaky any more.

Canonical link: https://commits.webkit.org/169252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192175 268f45cc-cd09-0410-ab3c-d52691b4dbfc